src/style.css
/*----------- Color Pallete -----------*/
body {
	font-family: 'ProximaNova-Regular';
}
/*-- Green --*/
.text-primary {
	color: #84c225;
}

/*-- Gray --*/
.text-dark {
	color: #444;
}

.text-meduim {
	color: #666;
}

.text-light {
	color: #979797;
}

/*-- Red --*/
.text-danger {
	color: #da251d;
}

/*-- Orange --*/
.text-warning {
	color: #f2aa00;
}
.txt-bold {
	font-family: 'ProximaNova-Semibold';
}
.text-left {
	text-align: left;
}

.text-blue {
	color: #458ef5;
}
.text-center {
	text-align: center;
}
.text-small {
	font-size: 12px;
}
.text-medium {
	font-size: 14px;
}
.text-large {
	font-size: 16px;
}
/*----------- Color Pallete -----------*/
.mar-top-15 {
  margin-top:15px;
}
.mar-top-5 {
  margin-top:5px;
}
.container {

	background: #f7f7f7;
}
.header {
	max-width: 1200px;
	margin:0 auto;
	padding:12px;
	font-size: 14px;
	display: grid;
	grid-template-columns: 60% 10% 10% 10% 10%;
	align-items: center;
}
.header .ty-icon {
	display: block;
}
.footer {
	color: #4a4a4a;
	font-size: 14px;
	border-top: 1px solid #dfdfdf;
	height: 148px;
}

body {
	margin:0;
}
.pos-relative {
  position: relative;
}



.fade {
  animation: 0.4s ease-out fade 1;
}

@keyframes fade {
  0% {
    opacity: 0;
    visibility: hidden;
  }
  100% {
    opacity: 1;
    visibility: visible;
  }
}

.section {
  overflow:hidden;
  transition:max-height 0.3s ease-out;
  height:auto;
  max-height:600px;
}
.section.collapsed {
  min-height:100px;
}

/*----------- Success Animated Icon -----------*/
@-webkit-keyframes scaleAnimation {
  0% {
    opacity: 0;
    -webkit-transform: scale(1.5);
            transform: scale(1.5);
  }
  100% {
    opacity: 1;
    -webkit-transform: scale(1);
            transform: scale(1);
  }
}

@keyframes scaleAnimation {
  0% {
    opacity: 0;
    -webkit-transform: scale(1.5);
            transform: scale(1.5);
  }
  100% {
    opacity: 1;
    -webkit-transform: scale(1);
            transform: scale(1);
  }
}
@-webkit-keyframes drawCircle {
  0% {
    stroke-dashoffset: 151px;
  }
  100% {
    stroke-dashoffset: 0;
  }
}
@keyframes drawCircle {
  0% {
    stroke-dashoffset: 151px;
  }
  100% {
    stroke-dashoffset: 0;
  }
}
@-webkit-keyframes drawCheck {
  0% {
    stroke-dashoffset: 36px;
  }
  100% {
    stroke-dashoffset: 0;
  }
}
@keyframes drawCheck {
  0% {
    stroke-dashoffset: 36px;
  }
  100% {
    stroke-dashoffset: 0;
  }
}
@-webkit-keyframes fadeOut {
  0% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}
@keyframes fadeOut {
  0% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}
@-webkit-keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}
@keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}
#successAnimationCircle {
  stroke-dasharray: 151px 151px;
  stroke: #84c225;
}

#successAnimationCheck {
  stroke-dasharray: 36px 36px;
  stroke: #84c225;
}

#successAnimationResult {
  fill: #84c225;
  opacity: 0;
}

#successAnimation.animated {
  -webkit-animation: 1s ease-out 0s 1 both scaleAnimation;
          animation: 1s ease-out 0s 1 both scaleAnimation;
}
#successAnimation.animated #successAnimationCircle {
  -webkit-animation: 1.5s cubic-bezier(0.77, 0, 0.175, 1) 0s 1 both drawCircle, 0.3s linear 0.9s 1 both fadeOut;
          animation: 1.5s cubic-bezier(0.77, 0, 0.175, 1) 0s 1 both drawCircle, 0.3s linear 0.9s 1 both fadeOut;
}
#successAnimation.animated #successAnimationCheck {
  -webkit-animation: 1s cubic-bezier(0.77, 0, 0.175, 1) 0s 1 both drawCheck, 0.3s linear 0.9s 1 both fadeOut;
          animation: 1s cubic-bezier(0.77, 0, 0.175, 1) 0s 1 both drawCheck, 0.3s linear 0.9s 1 both fadeOut;
}
#successAnimation.animated #successAnimationResult {
  -webkit-animation: 2s linear 0.9s both fadeIn;
          animation: 2s linear 0.9s both fadeIn;
}
/*----------- Success Animated Icon -----------*/
.clearfix:after {
   content: " "; /* Older browser do not support empty content */
   visibility: hidden;
   display: block;
   height: 0;
   clear: both;
}
.fl-rt {
	float: right;
}
.content {
	background: #fff;
	width: 660px;
	margin: 0 auto;
	text-align: center;
  padding: 15px 0;
}
.content textarea {
	width: 430px;
  padding: 5px;
  height: 91px;;
}
.feedback-form {
	width: 450px;
	margin: 0 auto;
}

.pannel {
	background: #f7f7f7;
	padding: 15px 20px;
}

.btn-primary {
  color: #fff;
  background-color: #84c225;
  border-color: #84c225;
}

.btn-primary:hover {
  background-color: #7fb52d;
}

.btn {
  display: inline-block;
  position: relative;
  padding: 7px 19px 6px 19px;
  text-decoration: none;
  font-family: 'ProximaNova-Regular';
  margin-bottom: 0;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.42857143;
  text-align: center;
  white-space: nowrap;
  vertical-align: middle;
  -ms-touch-action: manipulation;
  touch-action: manipulation;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-image: none;
  border: 1px solid transparent;
  border-radius: 4px;
  -webkit-transition-duration: 0.4s; /* Safari */
  transition-duration: 0.4s;
}

.btn-default {
	border: 1px solid #979797;
	background: #fff;
	color: #666;
}
.seperator {
  text-align:center;
  border-bottom: 1px solid #979797;
  line-height:0;
  margin: 25px auto;
}
.seperator span {
  background:#fff;
  padding:0 10px;
}

.btn-ripple-submit {
	margin: 5px auto;
	width: 100%;
}
.btn-lg {
  padding: 15px 57px 14px 57px !important;
  font-family: 'ProximaNova-Semibold';
  font-size: 16px;
}

.form-control {
	border: 1px solid #979797;
	border-radius: 3px;
	font-size: 16px;
	font-family: 'ProximaNova-Regular';
}
:focus{
	outline:none !important;
}

.btn-ripple { margin: 5px; }
.btn-secondary {
	background: #666;
	border:1px solid #666;
	color:#fff;
}
.rating-txt {
	vertical-align: super;
	margin-right: 10px;
}
.btn-refer {
  padding: 6px 8px 5px 8px;
}
.btn-refer .ty-icon-rupee-circle {
  vertical-align: super;
  margin-right: 5px;
}
/* ... */

